elk-and-nginx/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: app
spec:
  replicas: 6
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "250m"
            limits:
              cpu: "500m"
          volumeMounts:
            - mountPath: /etc/nginx
              readOnly: true
              name: nginx-conf
            - name: log
              mountPath: /var/log
        - name: app
          image: <app image uri>
        - name: filebeat
          image: public.ecr.aws/elastic/filebeat:8.4.3
          args:
            - -c
            - /etc/filebeat/conf.yaml
            - -e
          volumeMounts:
            - name: filebeat-conf
              mountPath: /etc/filebeat
            - name: log
              mountPath: /var/log
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
        - name: filebeat-conf
          configMap:
            name: filebeat-conf
        - name: log
